<resources>
    <string name="app_name">Computus</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_mul">*</string>
    <string name="btn_div">÷</string>
    <string name="btn_sum">=</string>
    <string name="btn_point">.</string>
    <string name="btn_del">С</string>
    <string name="add_formula">NEW</string>
    <string name="sqrt">√</string>
    <string name="pow">^</string>
    <string name="percent">%</string>
    <string name="btn_result">=</string>
</resources>
