<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="app.di_v.computus.ui.AppViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_8"
        android:layout_marginBottom="24dp">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="right|bottom"
            android:maxLines="1"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:textSize="40sp"
            android:text="@{viewModel.formula}" />

        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/textView_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:gravity="center_vertical|right"
            android:maxLines="1"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:textSize="40sp"
            android:text="@{viewModel.result}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_pow"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('^')}"
                android:text="@string/pow" />

            <Button
                android:id="@+id/btn_sqrt"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('√')}"
                android:text="@string/sqrt" />

            <Button
                android:id="@+id/btn_percent"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('%')}"
                android:text="@string/percent" />

            <Button
                android:id="@+id/btn_div"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('/')}"
                android:text="@string/btn_div" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/seven"
                android:onClick="@{() -> viewModel.addNum('7')}"/>

            <Button
                android:id="@+id/btn_8"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eight"
                android:onClick="@{() -> viewModel.addNum('8')}"/>

            <Button
                android:id="@+id/btn_9"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nine"
                android:onClick="@{() -> viewModel.addNum('9')}"/>

            <Button
                android:id="@+id/btn_multiply"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('*')}"
                android:text="@string/btn_mul" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/four"
                android:onClick="@{() -> viewModel.addNum('4')}"/>

            <Button
                android:id="@+id/btn_5"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five"
                android:onClick="@{() -> viewModel.addNum('5')}"/>

            <Button
                android:id="@+id/btn_6"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/six"
                android:onClick="@{() -> viewModel.addNum('6')}"/>

            <Button
                android:id="@+id/btn_sub"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('-')}"
                android:text="@string/btn_sub" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('1')}"
                android:text="@string/one" />

            <Button
                android:id="@+id/btn_2"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('2')}"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn_3"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('3')}"
                android:text="@string/three" />

            <Button
                android:id="@+id/btn_add"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('+')}"
                android:text="@string/btn_add" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/btn_del"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.delete()}"
                android:text="@string/btn_del" />

            <Button
                android:id="@+id/btn_0"
                style="@style/ButtonStyle"
                android:elevation="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('0')}"
                android:text="@string/zero" />

            <Button
                android:id="@+id/btn_point"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.addNum('.')}"
                android:text="@string/btn_point" />

            <Button
                android:id="@+id/btn_result"
                style="@style/ButtonStyle.Result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.result()}"
                android:text="@string/btn_result" />

        </LinearLayout>

    </LinearLayout>

</layout>